Close privet printer notifications when clicked.

BUG=643268

Review-Url: https://codereview.chromium.org/2446043002
Cr-Commit-Position: refs/heads/master@{#427720}

Former-commit-id: 84a0c256d7371bf0bd495f6d3ac3d0157e61fa44